# knowledge

./: .editorconfig  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRACT.md  README.md  build.gradle.kts  package.json  pnpm-lock.yaml  release-please-config.json  settings.gradle.kts
.github/workflows/: add-to-project.yml  ci.yml  release.yml  repository-hygiene.yml
api/: Dockerfile  README.md  build.gradle.kts
api/src/integrationTest/kotlin/com/jorisjonkers/personalstack/knowledge/: HealthIntegrationTest.kt  IntegrationTestBase.kt
api/src/integrationTest/kotlin/com/jorisjonkers/personalstack/knowledge/audit/: AuditFlowIntegrationTest.kt
api/src/integrationTest/kotlin/com/jorisjonkers/personalstack/knowledge/capture/: CaptureFlowIntegrationTest.kt
api/src/integrationTest/kotlin/com/jorisjonkers/personalstack/knowledge/contract/: OpenApiSpecExportTest.kt
api/src/integrationTest/kotlin/com/jorisjonkers/personalstack/knowledge/discovery/: DiscoveryFlowIntegrationTest.kt  SuggestionsRepositoryIntegrationTest.kt
api/src/main/kotlin/com/jorisjonkers/personalstack/knowledge/: KnowledgeApiApplication.kt
api/src/main/resources/: application.yml
api/src/main/resources/db/migration/: V13__rebrand_seed_projects.sql  V3__seed_topics.sql  V4__audit_log.sql  V6__reclassification_watermarks.sql  V8__seed_projects.sql
api/src/main/resources/db/migration-pg/: V11__kb_curator_runs.sql  V12__recall_fts_index.sql
api/src/main/resources/installer/: install.sh
api/src/test/resources/recall-eval/: historical-mistakes.json
client-spec/: build.gradle.kts
client-spec/openapi/: knowledge-api.json
clients/java/: build.gradle.kts
clients/kotlin/: build.gradle.kts
clients/typescript/: openapi-ts.config.ts  package.json  tsconfig.json
deploy/: deployment.yml  development.env  images.json  production.env  runtime.env  staging.env
gradle/: libs.versions.toml
ingest-worker/: .gitignore  Dockerfile  README.md  pyproject.toml
ingest-worker/src/knowledge_worker/: __init__.py  handlers.py  messages.py  migrate.py  settings.py  telemetry.py
ingest-worker/tests/integration/: test_rabbit_consumer.py
ingest-worker/tests/unit/: test_build_handler.py  test_handlers.py  test_messages.py  test_settings.py
knowledge-api/: Dockerfile  README.md  build.gradle.kts  crac-launch.sh  entrypoint.sh  openapi.json
knowledge-api/crac-empty/: .gitkeep
knowledge-api/src/integrationTest/kotlin/com/jorisjonkers/personalstack/knowledge/: HealthIntegrationTest.kt  IntegrationTestBase.kt
knowledge-api/src/main/kotlin/com/jorisjonkers/personalstack/knowledge/: KnowledgeApiApplication.kt
knowledge-api/src/main/resources/: application-crac-train.yml  application.yml  logback-spring.xml
knowledge-api/src/main/resources/db/migration/: V10__recall_stats.sql  V1__provenance_schema.sql  V2__topic_vocabulary.sql  V5__title_locked.sql  V7__project_vocabulary.sql
knowledge-api/src/main/resources/db/migration-pg/: V9__embeddings.sql
knowledge-api/src/main/resources/installer/: install-agents.sh  install.sh
knowledge-api/src/test/resources/recall-eval/: historical-mistakes.json
knowledge-ingest-worker/: Dockerfile  README.md  pyproject.toml
knowledge-ingest-worker/src/knowledge_worker/: __main__.py  consumer.py  handlers.py  messages.py  settings.py  store.py  vault.py
knowledge-ingest-worker/tests/integration/: test_postgres_store.py
knowledge-ingest-worker/tests/unit/: test_consumer.py  test_handlers.py  test_migrate.py  test_settings.py  test_store.py  test_telemetry.py  test_vault.py
(+133 files in other folders)
